Feat: 유효성 검사 및 마케팅 여부 조회 기능 추가